# poiesis

./: .envrc.template  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  dependency-issue.yml
.github/actions/setup/poetry/: action.yaml
.github/actions/setup/uv/: action.yaml
.github/workflows/: code_quality.yaml  code_test.yaml  docs.yaml  pr_validation.yaml  vulnerability.yaml
deployment/: dev.yaml
deployment/helm/: Chart.yaml  values.yaml
deployment/helm/templates/: NOTES.txt  _helper.tpl
deployment/helm/templates/auth/: secret.yaml
deployment/helm/templates/keycloak/: secret.yaml
deployment/helm/templates/minio/: secret.yaml
deployment/helm/templates/mongo/: deployment.yaml  pvc.yaml  secrets.yaml  service.yaml
deployment/helm/templates/poiesis/: configmap.yaml  deployment.yaml  ingress.yaml  rbac.yaml  security.yaml  service.yaml
deployment/helm/templates/redis/: secret.yaml
deployment/helm/templates/s3/: secret.yaml
deployment/images/: Dockerfile
docs/app/: index.md  package-lock.json  package.json  team.md
docs/app/.vitepress/: config.mjs
docs/app/.vitepress/theme/: custom-fonts.css  custom.css  index.js  swagger.css
docs/app/.vitepress/theme/components/: SwaggerViewer.vue
docs/app/docs/deploy/: deploying-poiesis.md  prerequisites.md
docs/app/docs/dev/: architecture.md  starting-locally.md
docs/app/docs/intro/: api-reference.md  api.md  auth.md  cli.md  glossary.md  poiesis.md  tes.md
docs/app/docs/usage/: nextflow.md  training.md  usage.md
docs/source/: conf.py  index.rst
docs/source/pages/: modules.rst  poiesis.api.auth.providers.rst  poiesis.api.auth.rst  poiesis.api.controllers.rst  poiesis.api.rst  poiesis.api.tes.rst  poiesis.cli.commands.poiesis.rst  poiesis.cli.commands.rst  poiesis.cli.commands.tes.rst  poiesis.cli.rst  poiesis.core.adaptors.kubernetes.rst  poiesis.core.adaptors.message_broker.rst  poiesis.core.adaptors.rst  poiesis.core.ports.rst  poiesis.core.rst  poiesis.core.services.filer.rst  poiesis.core.services.filer.strategy.rst  poiesis.core.services.rst  poiesis.core.services.texam.rst  poiesis.core.services.torc.rst  poiesis.repository.rst  poiesis.rst
poesis/: __init__.py
poesis/api/: __init__.py
poesis/api/tes/: __init__.py  models.py
poesis/api/tes/spec/: c4c17c9.openapi.yaml
poesis/core/: __init__.py  constants.py
poesis/core/adaptors/kubernetes/: kubernetes.py
poesis/core/adaptors/message_broker/: redis_adaptor.py
poesis/core/services/torc/: main.py  torc.py  torc_execution_template.py  torc_texam_execution.py  torc_tif_execution.py  torc_tof_execution.py
poiesis/: __init__.py  constants.py
poiesis/api/: __init__.py  api_handlers.py  app.py  asgi.py  constants.py  controllers.py  exceptions.py  models.py  security.py  utils.py
poiesis/api/auth/: auth_factory.py
poiesis/api/auth/providers/: auth.py  dummy.py  keycloak.py  none.py  oauth2.py  oidc.py
poiesis/api/controllers/: __init__.py  cancel_task.py  create_task.py  get_task.py  interface.py  list_tasks.py
poiesis/api/tes/: models.py
poiesis/api/tes/spec/: c4c17c9.openapi.yaml
poiesis/cli/: __init__.py  base.py  main.py  styling.py  utils.py
poiesis/cli/commands/: __init__.py  api.py  texam.py  tif.py  tof.py  torc.py
poiesis/cli/commands/poiesis/: __init__.py  api.py  base.py  texam.py  tif.py  tof.py  torc.py
poiesis/cli/commands/tes/: __init__.py  base.py  task.py
poiesis/core/: __init__.py  constants.py  logging_config.py
poiesis/core/adaptors/: __init__.py
poiesis/core/adaptors/kubernetes/: __init__.py  kubernetes.py  models.py
poiesis/core/adaptors/message_broker/: __init__.py  redis_adaptor.py
poiesis/core/ports/: __init__.py  kubernetes.py  message_broker.py
poiesis/core/services/: __init__.py  models.py  utils.py
poiesis/core/services/filer/: __init__.py  filer.py  filer_strategy_factory.py  tif.py  tof.py
poiesis/core/services/filer/strategy/: __init__.py  content_filer.py  filer_strategy.py  http_filer.py  local_filer.py  s3_filer.py
poiesis/core/services/texam/: __init__.py  main.py  texam.py
poiesis/core/services/torc/: __init__.py  main.py  torc.py  torc_execution_template.py  torc_texam_execution.py  torc_tif_execution.py  torc_tof_execution.py
poiesis/repository/: __init__.py  mongo.py  schemas.py
tests/test_integration/: test_init.py
tests/test_unit/: test_init.py
