[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
code_quality = [
  "mypy>=1.10.0",
  "ruff>=0.4.10",
  "typos>=1.22.8",
]
docs = [
  "added-value>=0.24.0",
  "docutils>=0.20.1",
  "furo>=2024.5.6",
  "m2r2>=0.3.3.post2",
  "sphinx-autodoc-typehints>=2.1.0",
  "sphinx>=7.3.7",
  "tomli>=2.0.1",
]
misc = [
  "pre-commit>=3.7.1",
]
test = [
  "pytest-cov>=5.0.0,<=6.0.0",
  "pytest>=8.2.2,<9.0.0",
]
types = [
  "boto3-stubs>=1.36.26,<2",
  "kubernetes-stubs>=22.6.0.post1,<23",
  "types-botocore>=1.0.2,<2",
  "types-pyyaml>=6.0.12.20250402,<7",
  "types-requests>=2.32.0.20250328,<3",
]
vulnerability = [
  "bandit>=1.7.8,<2.0.0",
  "safety>=3.2.0,<4.0.0",
]

[project]
authors = [{email = "jh4official@gmail.com", name = "Javed Habib"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "boto3>=1.36.26,<2",
  "botocore>=1.36.26,<2",
  "connexion[swagger-ui, uvicorn]>=3.2.0,<4",
  "gunicorn>=23.0.0,<24",
  "kubernetes>=32.0.1,<33",
  "motor>=3.7.0,<4",
  "pydantic>=2.10.6,<3",
  "pyjwt>=2.10.1,<3",
  "python-keycloak>=5.5.0,<6",
  "redis>=5.2.1,<6",
  "rich-click>=1.8.7,<2",
  "tomli>=2.2.1,<3",
]
description = "TES on kubernetes"
keywords = ["automation", "cloud", "devops", "infrastructure", "kubernetes", "tes", "ga4gh"]
license = "Apache-2.0"
maintainers = [{email = "jh4official@gmail.com", name = "Javed Habib"}]
name = "poiesis"
readme = "README.md"
requires-python = ">=3.13.0,<4.0.0"
version = "0.1.0"

[project.scripts]
poiesis = "poiesis.cli.main:main"

[project.urls]
Documentation = "https://poiesis.vercel.app"
Issues = "https://github.com/jaeaeich/poiesis/issues"
Repository = "https://github.com/jaeaeich/poiesis"

[tool.bandit]
skips = ["B101"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "connexion.*",
  "gunicorn.*",
]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
  "B", # flake8-bugbear
  "C90", # mccabe
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "PL", # pylint
  "SIM", # flake8-simplify
  "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.typos.default.extend-words]
ser = 'ser'
